# Fubuki

./: .gitignore  CMakeLists.txt  License.html  Readme.md
Source/: DictionarySearchHandler.cpp  ExitHandler.cpp  Program.cpp  WebpageBuilder.cpp
Source/C++/: DictionarySearchHandler.cpp  ExitHandler.cpp  Program.cpp  WebpageBuilder.cpp
Source/Include/: Configuration Template.hpp  DictionarySearchHandler.hpp  Document.h  ExitHandler.hpp  HTTP.h  Server.hpp  WebpageBuilder.hpp
Source/Web/: index.html
Source/Web/Dictionary/: index.html
Source/Web/Document Reader/: epub.html
Source/Web/Resources/Styles/: app.css  launcher.css  reader.css  reset.css  settings.css
Source/Web/Scripts/: app.js
Source/Web/Settings/: about.html  index.html
